# verifyiqq-env

./: .env  .env.example  .gitignore.backup  LEARNING_JOURNEY.md  PROJECT_STRUCTURE.md  README.md  baseline.py  baseline_results.json  environmentmodels.py  inference.py  inference_results.json  openenv.yaml  pyproject.toml  requirements.txt  server.py  server_root_backup.py  test.py
data/: messages.json  orders.json
environment/: env.py  models.py  reward.py  state_manager.py
graders/: grader1.py  grader2.py  grader3.py
nlp/: intent.py  language.py  tone.py
server/: app.py
static/: app.js  index.html  style.css
tasks/: task1.py  task2.py  task3.py
verifier/: claim_extractor.py  claim_validator.py
