[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "verifyiq-env"
version = "1.0.0"
description = "AI That Doesn't Just Respond. It Verifies."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openai==1.14.3",
    "lingua-language-detector==2.0.2",
    "pyyaml==6.0.1",
    "python-multipart==0.0.9",
    "requests==2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]