[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "verifyiq-env"
version = "1.0.0"
description = "AI That Doesn't Just Respond. It Verifies."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.4",
    "openai>=2.7.2",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:main"

[tool.setuptools.packages.find]
where = ["."]